Fix name body dark mode

--- a/css/global.css
+++ b/css/global.css
@@ -39,7 +39,7 @@ a {
 }
 
 /* Dark Mode */
-.dark {
+body.dark {
   background-color: #141d2f;
 }
 
